<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:key="is_oncall"
        app:summaryOff="@string/pref_oncall_off"
        app:summaryOn="@string/pref_oncall_on"
        app:title="@string/pref_oncall" />

    <PreferenceCategory
        app:key="notification_prefs"
        app:title="@string/notification_prefs">
        <!--
        <Preference
            app:defaultValue="false"
            app:key="alert_sound"
            app:title="@string/pref_alertsound" />
        -->

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="use_alarm_volume"
            app:summaryOff="@string/pref_alarm_volume_off"
            app:summaryOn="@string/pref_alarm_volume_on"
            app:title="@string/pref_alarm_volume" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="vibrate"
            app:title="@string/pref_vibrate" />

        <ListPreference
            app:defaultValue="20000"
            app:entries="@array/intervals"
            app:entryValues="@array/intervals_in_ms"
            app:key="notification_interval"
            app:summary="@string/pref_notificationtime"
            app:title="@string/pref_notificationtime" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="receive settings"
        app:title="@string/receive_settings">
        <EditTextPreference
            app:defaultValue="@string/default_sender_match"
            app:key="sender_match"
            app:summary="@string/pref_sms_sender_summary"
            app:title="@string/pref_sms_sender" />
        <ListPreference
            app:defaultValue="Standard"
            app:entries="@array/pageparser"
            app:entryValues="@array/pageparser"
            app:key="pageparser"
            app:title="@string/page_parser_type" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="consume_sms_message"
            app:summary="@string/pref_sms_consumesms_summary"
            app:title="@string/pref_sms_consumesms" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="also_match_body"
            app:summary="@string/pref_match_message_body_summary"
            app:title="@string/pref_match_message_body" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="reply settings"
        app:title="Reply Settings">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="include_subject"
            app:summary="@string/pref_sms_subject_summary"
            app:title="@string/pref_sms_subject" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="use_received_service_center"
            app:summary="@string/pref_sms_servicecenter_summary"
            app:title="@string/pref_sms_servicecenter" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="include_dest_address"
            app:summary="@string/pref_sms_send_dest_summary"
            app:title="@string/pref_sms_send_dest" />
        <Preference
            app:key="edit_replies"
            app:summary="@string/pref_editreplies_summary"
            app:title="@string/pref_editreplies">
            <intent android:targetClass=".ReplyEditor" />

        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
